--- a/ProgramInwentaryzacyjny/MainWindow.xaml
+++ b/ProgramInwentaryzacyjny/MainWindow.xaml
@@ -5,12 +5,28 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ProgramInwentaryzacyjny"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" MinHeight="450" MinWidth="800" MaxHeight="450" MaxWidth="800">
     <Grid>
-        <DataGrid Name="ProduktDataGrid" Background="NavajoWhite" Margin="5" AutoGenerateColumns="False" IsReadOnly="True">
-            <DataGrid.Columns>
-                <DataGridTextColumn Header="Symbol" Binding="{Binding Symbol}"/>
-            </DataGrid.Columns>
-        </DataGrid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="5*"/>
+        </Grid.ColumnDefinitions>
+        <Grid Background="LightBlue">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+            </Grid.RowDefinitions>
+            <TextBlock Grid.Column="0" Grid.Row="0" FontSize="20" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5" >Menu</TextBlock>
+            <Button Grid.Column="0" Grid.Row="1" x:Name="Magazyn" Content="Magazyn" FontSize="20" FontWeight="Bold" Height="50" Margin="5" Click="Magazyn_Click"/>
+            <Button Grid.Column="0" Grid.Row="2" x:Name="Aktualizacja" Content="Aktualizacja" FontSize="20" FontWeight="Bold" Height="50" Margin="5"/>
+            <Button Grid.Column="0" Grid.Row="3" x:Name="Raport" Content="Raport" FontSize="20" FontWeight="Bold" Height="50" Margin="5"/>
+            <Button Grid.Column="0" Grid.Row="4" x:Name="Wyjście" Content="Wyjście" FontSize="20" FontWeight="Bold" Height="50" Margin="5" Click="Wyjście_Click"/>
+            <TextBlock Grid.Column="0" Grid.Row="5" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Bottom">wersja 0.0.1</TextBlock>
+        </Grid>
+        <Frame Grid.Column="1" x:Name="MainFrame" NavigationUIVisibility="Hidden"/>
     </Grid>
 </Window>
