--- a/ProgramInwentaryzacyjny/StorageEditPage.xaml
+++ b/ProgramInwentaryzacyjny/StorageEditPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="ProgramInwentaryzacyjny.StorageMainPage"
+﻿<Page x:Class="ProgramInwentaryzacyjny.StorageEditPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,12 +6,8 @@
       xmlns:local="clr-namespace:ProgramInwentaryzacyjny"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="StorageMainPage">
+      Title="StorageEditPage">
     <Grid>
-        <DataGrid Grid.Column="0" Name="ProduktDataGrid" Background="WhiteSmoke" Margin="5" AutoGenerateColumns="False" IsReadOnly="True">
-            <DataGrid.Columns>
-                <DataGridTextColumn Header="Symbol" Binding="{Binding Symbol}"/>
-            </DataGrid.Columns>
-        </DataGrid>
+        
     </Grid>
 </Page>
